# 1.03.30 (33920) Aug 5, 2009
# 1.03.29 (33918) Aug 5, 2009
Internationalized HTML snippets, one in FreeBodyDiagramNode, one in ObjectSelectionNode
Provided internationalization
Added the ability to step during recording, instead of only during playback
Remove wall and normal work from bar chart
Display wall force when pressing block against the wall
Update colors for Normal force and Wall force
Fixed: Reset all should hide the work energy bar chart
# 1.03.28 (33887) Aug 3, 2009
# 1.03.27 (33885) Aug 3, 2009
Added an application for Forces & Friction
Made the friction coefficients change when the ramp is wet
Made it so the ramp turns blue when it is wet
Added "clear heat" button to work/energy bar chart window
Added support for energy conservation in the frictionless case
Added initial support for energy conservation with friction
Add record/playback of thermal energy for the ramp
Refactored thermal energy into bead state memento
Use lazy vals instead of defs where possible for vector calculations to improve performance
Batch notifications during bead update; profiler reports a 17% performance improvement
Replaced "Ftotal" and "Fnet" with "Fsum"
Made it so all the tabs start motionless, instead of with the object sliding
Made it so the stick figure starts next to the object on startup.
Removed extraneous step button from the right hand side control panel
# 1.03.26 (33807) Jul 31, 2009
# 1.03.25 (33806) Jul 31, 2009
# 1.03.24 (33804) Jul 31, 2009
Fixed: Stick figure position should reset on Reset All
Fixed: Vector labels should be near the tail if they will be offscreen shown near the tip (or if the vector length is longer than some threshold)
Set colors to match old colors in the ramp, except for net force which was given in the design doc
Fixed: Reset All causes the sim to pause
# 1.03.23 (33790) Jul 30, 2009
Added a series for total force
Added support for "clear" and "reset all" in charts
Added "click/drag-to-seek" on the time control panel timeline bar